<resources>
    <string name="app_name" type="string">ChessBattle</string>
    <string name="app_id" translatable="false" type="string">300396389668</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="username">Username</string>
    <string name="sign_in">Sign in</string>
    <string name="register_and_sign_in">Register and sign in</string>

    <string name="playerTwo">Player Two</string>
    <string name="resign">Resign game</string>
    <string name="offer_draw">Offer draw</string>

    <string name="a8" translatable="false" type="string">a8</string>
    <string name="b8" translatable="false" type="string">b8</string>
    <string name="c8" translatable="false" type="string">c8</string>
    <string name="d8" translatable="false" type="string">d8</string>
    <string name="e8" translatable="false" type="string">e8</string>
    <string name="f8" translatable="false" type="string">f8</string>
    <string name="g8" translatable="false" type="string">g8</string>
    <string name="h8" translatable="false" type="string">h8</string>
    <string name="a7" translatable="false" type="string">a7</string>
    <string name="b7" translatable="false" type="string">b7</string>
    <string name="c7" translatable="false" type="string">c7</string>
    <string name="d7" translatable="false" type="string">d7</string>
    <string name="e7" translatable="false" type="string">e7</string>
    <string name="f7" translatable="false" type="string">f7</string>
    <string name="g7" translatable="false" type="string">g7</string>
    <string name="h7" translatable="false" type="string">h7</string>
    <string name="a6" translatable="false" type="string">a6</string>
    <string name="b6" translatable="false" type="string">b6</string>
    <string name="c6" translatable="false" type="string">c6</string>
    <string name="d6" translatable="false" type="string">d6</string>
    <string name="e6" translatable="false" type="string">e6</string>
    <string name="f6" translatable="false" type="string">f6</string>
    <string name="g6" translatable="false" type="string">g6</string>
    <string name="h6" translatable="false" type="string">h6</string>
    <string name="a5" translatable="false" type="string">a5</string>
    <string name="b5" translatable="false" type="string">b5</string>
    <string name="c5" translatable="false" type="string">c5</string>
    <string name="d5" translatable="false" type="string">d5</string>
    <string name="e5" translatable="false" type="string">e5</string>
    <string name="f5" translatable="false" type="string">f5</string>
    <string name="g5" translatable="false" type="string">g5</string>
    <string name="h5" translatable="false" type="string">h5</string>
    <string name="a4" translatable="false" type="string">a4</string>
    <string name="b4" translatable="false" type="string">b4</string>
    <string name="c4" translatable="false" type="string">c4</string>
    <string name="d4" translatable="false" type="string">d4</string>
    <string name="e4" translatable="false" type="string">e4</string>
    <string name="f4" translatable="false" type="string">f4</string>
    <string name="g4" translatable="false" type="string">g4</string>
    <string name="h4" translatable="false" type="string">h4</string>
    <string name="a3" translatable="false" type="string">a3</string>
    <string name="b3" translatable="false" type="string">b3</string>
    <string name="c3" translatable="false" type="string">c3</string>
    <string name="d3" translatable="false" type="string">d3</string>
    <string name="e3" translatable="false" type="string">e3</string>
    <string name="f3" translatable="false" type="string">f3</string>
    <string name="g3" translatable="false" type="string">g3</string>
    <string name="h3" translatable="false" type="string">h3</string>
    <string name="a2" translatable="false" type="string">a2</string>
    <string name="b2" translatable="false" type="string">b2</string>
    <string name="c2" translatable="false" type="string">c2</string>
    <string name="d2" translatable="false" type="string">d2</string>
    <string name="e2" translatable="false" type="string">e2</string>
    <string name="f2" translatable="false" type="string">f2</string>
    <string name="g2" translatable="false" type="string">g2</string>
    <string name="h2" translatable="false" type="string">h2</string>
    <string name="a1" translatable="false" type="string">a1</string>
    <string name="b1" translatable="false" type="string">b1</string>
    <string name="c1" translatable="false" type="string">c1</string>
    <string name="d1" translatable="false" type="string">d1</string>
    <string name="e1" translatable="false" type="string">e1</string>
    <string name="f1" translatable="false" type="string">f1</string>
    <string name="g1" translatable="false" type="string">g1</string>
    <string name="h1" translatable="false" type="string">h1</string>
</resources>
